340: Unit tests: QTriangle Done. Review is pending. Operator== and GetAngle methods removed. Some fixes applied to QTriangle.

--- a/trunk/testing/projects/CodeBlocks10/QEUnitTests/Tools/Tools.cbp
+++ b/trunk/testing/projects/CodeBlocks10/QEUnitTests/Tools/Tools.cbp
@@ -191,6 +191,7 @@
 		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QTranslationMatrix_Test.cpp">
 			<Option virtualFolder="Tests\Math\" />
 		</Unit>
+		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QTriangle_Test.cpp" />
 		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QVector2_Test.cpp">
 			<Option virtualFolder="Tests\Math\" />
 		</Unit>
