357 - Unit tests: QBaseQuadrilateral Unit test for class QBaseQuadrilateral

--- a/trunk/testing/projects/CodeBlocks10/QEUnitTests/Tools/Tools.cbp
+++ b/trunk/testing/projects/CodeBlocks10/QEUnitTests/Tools/Tools.cbp
@@ -104,6 +104,9 @@
 		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QBasePlane_Test.cpp">
 			<Option virtualFolder="Tests\Math\" />
 		</Unit>
+		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QBaseQuadrilateral_Tests.cpp">
+			<Option virtualFolder="Tests\Math\" />
+		</Unit>
 		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QBaseQuaternion_Test.cpp">
 			<Option virtualFolder="Tests\Math\" />
 		</Unit>
