357 - Unit tests: QBaseQuadrilateral Fixed a typo in the file's name.

--- a/trunk/testing/projects/CodeBlocks10/QEUnitTests/Tools/Tools.cbp
+++ b/trunk/testing/projects/CodeBlocks10/QEUnitTests/Tools/Tools.cbp
@@ -104,7 +104,7 @@
 		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QBasePlane_Test.cpp">
 			<Option virtualFolder="Tests\Math\" />
 		</Unit>
-		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QBaseQuadrilateral_Tests.cpp">
+		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QBaseQuadrilateral_Test.cpp">
 			<Option virtualFolder="Tests\Math\" />
 		</Unit>
 		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QBaseQuaternion_Test.cpp">
