343: Unit tests: QPlane Done. Protected methods have not been tested yet. Added forgotten constructor to QPlane. Fixed QPlane::QPlaneImp. Assertion added to QPlane's methods. QPlane's documentation extended.

--- a/trunk/testing/projects/CodeBlocks10/QEUnitTests/Tools/Tools.cbp
+++ b/trunk/testing/projects/CodeBlocks10/QEUnitTests/Tools/Tools.cbp
@@ -161,6 +161,7 @@
 		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QOrb_Test.cpp">
 			<Option virtualFolder="Tests\Math\" />
 		</Unit>
+		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QPlane_Test.cpp" />
 		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QQuaternionWhitebox.h">
 			<Option virtualFolder="Tests\Math\" />
 		</Unit>
