345: Unit tests: QRay3D Done. The review is pending. Fixed some minor issues of QRay3D. Added assertions. Constructor that accepts one vector have been declared explicit in QVector3 and QVector4. Some minor issues fixed in QRay tests.

--- a/trunk/testing/projects/CodeBlocks10/QEUnitTests/Tools/Tools.cbp
+++ b/trunk/testing/projects/CodeBlocks10/QEUnitTests/Tools/Tools.cbp
@@ -168,6 +168,9 @@
 		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QQuaternion_Test.cpp">
 			<Option virtualFolder="Tests\Math\" />
 		</Unit>
+		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QRay3D_Test.cpp">
+			<Option virtualFolder="Tests\Math\" />
+		</Unit>
 		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QRay_QVector4_Test.cpp">
 			<Option virtualFolder="Tests\Math\" />
 		</Unit>
