--- a/trunk/testing/projects/CodeBlocks10/QEUnitTests/Tools/Tools.cbp
+++ b/trunk/testing/projects/CodeBlocks10/QEUnitTests/Tools/Tools.cbp
@@ -161,11 +161,16 @@
 		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QOrb_Test.cpp">
 			<Option virtualFolder="Tests\Math\" />
 		</Unit>
-		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QPlane_Test.cpp" />
+		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QPlane_Test.cpp">
+			<Option virtualFolder="Tests\Math\" />
+		</Unit>
 		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QQuaternionWhitebox.h">
 			<Option virtualFolder="Tests\Math\" />
 		</Unit>
 		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QQuaternion_Test.cpp">
+			<Option virtualFolder="Tests\Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QRay2D_Test.cpp">
 			<Option virtualFolder="Tests\Math\" />
 		</Unit>
 		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QRay3D_Test.cpp">
