--- a/trunk/testing/projects/VS2010/QEUnitTests/Tools/Tools.vcxproj.filters
+++ b/trunk/testing/projects/VS2010/QEUnitTests/Tools/Tools.vcxproj.filters
@@ -180,6 +180,9 @@
     <ClCompile Include="..\..\..\..\tests\unit\testmodule_tools\QTriangle3D_Test.cpp">
       <Filter>Tests\Math</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\tests\unit\testmodule_tools\QLineSegment2D_Test.cpp">
+      <Filter>Tests\Math</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\..\testsystem\CommonConfigDefinitions.h">
