370: Unit tests: QHexahedron Unit tests implemented. The review is pending. Some compilation errors fixed in QLineSegment3D class. Some fixes applied to QHexahedron. Some assertions added.

--- a/trunk/testing/projects/CodeBlocks10/QEUnitTests/Tools/Tools.cbp
+++ b/trunk/testing/projects/CodeBlocks10/QEUnitTests/Tools/Tools.cbp
@@ -137,6 +137,9 @@
 		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QDualQuaternion_Test.cpp">
 			<Option virtualFolder="Tests\Math\" />
 		</Unit>
+		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QHexahedron_Test.cpp">
+			<Option virtualFolder="Tests\Math\" />
+		</Unit>
 		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QLineSegment2D_Test.cpp">
 			<Option virtualFolder="Tests\Math\" />
 		</Unit>
