371: Unit tests: QQuadrilateral Done. Pending the review. QQuadrilateral::GetUnitSquare has been corrected. Some assertions and documentation fragments added. Some tests of QHexahedron have been fixed.

--- a/trunk/testing/projects/CodeBlocks10/QEUnitTests/Tools/Tools.cbp
+++ b/trunk/testing/projects/CodeBlocks10/QEUnitTests/Tools/Tools.cbp
@@ -170,6 +170,9 @@
 		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QPlane_Test.cpp">
 			<Option virtualFolder="Tests\Math\" />
 		</Unit>
+		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QQuadrilateral_Test.cpp">
+			<Option virtualFolder="Tests\Math\" />
+		</Unit>
 		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QQuaternionWhitebox.h">
 			<Option virtualFolder="Tests\Math\" />
 		</Unit>
