--- a/trunk/testing/projects/CodeBlocks10/QEUnitTests/Tools/Tools.cbp
+++ b/trunk/testing/projects/CodeBlocks10/QEUnitTests/Tools/Tools.cbp
@@ -143,6 +143,9 @@
 		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QLineSegment2D_Test.cpp">
 			<Option virtualFolder="Tests\Math\" />
 		</Unit>
+		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QLineSegment3D_Test.cpp">
+			<Option virtualFolder="Tests\Math\" />
+		</Unit>
 		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QLineSegmentWhitebox.h">
 			<Option virtualFolder="Tests\Math\" />
 		</Unit>
