--- a/trunk/projects/VS2010/QuimeraEngine/Tools/Tools.vcxproj.filters
+++ b/trunk/projects/VS2010/QuimeraEngine/Tools/Tools.vcxproj.filters
@@ -259,5 +259,8 @@
     <ClCompile Include="..\..\..\..\source\QScalingMatrix3x3.cpp">
       <Filter>Math</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\source\SQInteger.cpp">
+      <Filter>DataTypes</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
