--- a/trunk/testing/projects/CodeBlocks10/QEUnitTests/Tools/Tools.cbp
+++ b/trunk/testing/projects/CodeBlocks10/QEUnitTests/Tools/Tools.cbp
@@ -255,7 +255,10 @@
 			<Option virtualFolder="Tests\Math\" />
 		</Unit>
 		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\SQFloat_Test.cpp">
-			<Option virtualFolder="Tests\Math\" />
+			<Option virtualFolder="Tests\DataTypes\" />
+		</Unit>
+		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\SQInteger_Test.cpp">
+			<Option virtualFolder="Tests\DataTypes\" />
 		</Unit>
 		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\SQPoint_Test.cpp">
 			<Option virtualFolder="Tests\Math\" />
