--- a/trunk/projects/CodeBlocks10/QuimeraEngine/Tools/Tools.cbp
+++ b/trunk/projects/CodeBlocks10/QuimeraEngine/Tools/Tools.cbp
@@ -5,13 +5,13 @@
 		<Option title="Tools" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
-		<Option virtualFolders="Math/;DataTypes/;" />
+		<Option virtualFolders="Math\;DataTypes\;" />
 		<Build>
 			<Target title="DebugLinux32SharedrtStatic">
 				<Option platforms="Unix;" />
-				<Option output="../../../../bin/CodeBlocks10/DebugLinux32SharedrtStatic/QuimeraEngineTools.a" prefix_auto="0" extension_auto="0" />
+				<Option output="..\..\..\..\bin\CodeBlocks10\DebugLinux32SharedrtStatic\QuimeraEngineTools.a" prefix_auto="0" extension_auto="0" />
 				<Option working_dir="" />
-				<Option object_output="../../../../garbage/CodeBlocks10/DebugLinux32SharedrtStatic" />
+				<Option object_output="..\..\..\..\garbage\CodeBlocks10\DebugLinux32SharedrtStatic" />
 				<Option type="2" />
 				<Option compiler="gcc" />
 				<Option createDefFile="1" />
@@ -26,9 +26,9 @@
 			</Target>
 			<Target title="DebugWin32SharedrtStatic">
 				<Option platforms="Windows;" />
-				<Option output="../../../../bin/CodeBlocks10/DebugWin32SharedrtStatic/QuimeraEngineTools.lib" prefix_auto="0" extension_auto="0" />
+				<Option output="..\..\..\..\bin\CodeBlocks10\DebugWin32SharedrtStatic\QuimeraEngineTools.lib" prefix_auto="0" extension_auto="0" />
 				<Option working_dir="" />
-				<Option object_output="../../../../garbage/CodeBlocks10/DebugWin32SharedrtStatic" />
+				<Option object_output="..\..\..\..\garbage\CodeBlocks10\DebugWin32SharedrtStatic" />
 				<Option type="2" />
 				<Option compiler="gcc" />
 				<Option createDefFile="1" />
@@ -49,254 +49,257 @@
 			<Add option="-Wswitch-default" />
 			<Add option="-Wall" />
 			<Add option="-fpermissive" />
-			<Add directory="../../../../headers" />
-			<Add directory="../../../../3rdparty/Boost/include" />
+			<Add directory="..\..\..\..\headers" />
+			<Add directory="..\..\..\..\3rdparty\Boost\include" />
 		</Compiler>
-		<Unit filename="../../../../headers/DataTypesDefinitions.h">
-			<Option virtualFolder="DataTypes/" />
+		<Unit filename="..\..\..\..\headers\DataTypesDefinitions.h">
+			<Option virtualFolder="DataTypes\" />
 		</Unit>
-		<Unit filename="../../../../headers/EQIntersections.h">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\headers\EQIntersections.h">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../headers/EQSpaceRelation.h">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\headers\EQSpaceRelation.h">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../headers/MathDefinitions.h">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\headers\MathDefinitions.h">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../headers/QBaseDualQuaternion.h">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\headers\QBaseDualQuaternion.h">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../headers/QBaseHexahedron.h">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\headers\QBaseHexahedron.h">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../headers/QBaseLineSegment.h">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\headers\QBaseLineSegment.h">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../headers/QBaseMatrix2x2.h">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\headers\QBaseMatrix2x2.h">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../headers/QBaseMatrix3x3.h">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\headers\QBaseMatrix3x3.h">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../headers/QBaseMatrix3x4.h">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\headers\QBaseMatrix3x4.h">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../headers/QBaseMatrix4x3.h">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\headers\QBaseMatrix4x3.h">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../headers/QBaseMatrix4x4.h">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\headers\QBaseMatrix4x4.h">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../headers/QBaseOrb.h">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\headers\QBaseOrb.h">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../headers/QBasePlane.h">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\headers\QBasePlane.h">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../headers/QBaseQuadrilateral.h">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\headers\QBaseQuadrilateral.h">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../headers/QBaseQuaternion.h">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\headers\QBaseQuaternion.h">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../headers/QBaseRay.h">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\headers\QBaseRay.h">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../headers/QBaseTriangle.h">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\headers\QBaseTriangle.h">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../headers/QBaseVector2.h">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\headers\QBaseVector2.h">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../headers/QBaseVector3.h">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\headers\QBaseVector3.h">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../headers/QBaseVector4.h">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\headers\QBaseVector4.h">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../headers/QCircle.h">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\headers\QCircle.h">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../headers/QDualQuaternion.h">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\headers\QDualQuaternion.h">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../headers/QHexahedron.h">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\headers\QHexahedron.h">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../headers/QLineSegment.h">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\headers\QLineSegment.h">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../headers/QLineSegment2D.h">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\headers\QLineSegment2D.h">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../headers/QLineSegment3D.h">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\headers\QLineSegment3D.h">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../headers/QMatrix2x2.h">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\headers\QMatrix2x2.h">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../headers/QMatrix3x3.h">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\headers\QMatrix3x3.h">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../headers/QMatrix3x4.h">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\headers\QMatrix3x4.h">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../headers/QMatrix4x3.h">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\headers\QMatrix4x3.h">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../headers/QMatrix4x4.h">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\headers\QMatrix4x4.h">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../headers/QOrb.h">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\headers\QOrb.h">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../headers/QPlane.h">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\headers\QPlane.h">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../headers/QQuadrilateral.h">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\headers\QQuadrilateral.h">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../headers/QQuaternion.h">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\headers\QQuaternion.h">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../headers/QRay.h">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\headers\QRay.h">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../headers/QRay2D.h">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\headers\QRay2D.h">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../headers/QRay3D.h">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\headers\QRay3D.h">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../headers/QRotationMatrix3x3.h">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\headers\QRotationMatrix3x3.h">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../headers/QScalingMatrix3x3.h">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\headers\QScalingMatrix3x3.h">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../headers/QSpaceConversionMatrix.h">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\headers\QSpaceConversionMatrix.h">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../headers/QSphere.h">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\headers\QSphere.h">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../headers/QTransformationMatrix.h">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\headers\QTransformationMatrix.h">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../headers/QTransformationMatrix3x3.h">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\headers\QTransformationMatrix3x3.h">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../headers/QTranslationMatrix.h">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\headers\QTranslationMatrix.h">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../headers/QTriangle.h">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\headers\QTriangle.h">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../headers/QTriangle2D.h">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\headers\QTriangle2D.h">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../headers/QTriangle3D.h">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\headers\QTriangle3D.h">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../headers/QVector2.h">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\headers\QVector2.h">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../headers/QVector3.h">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\headers\QVector3.h">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../headers/QVector4.h">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\headers\QVector4.h">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../headers/SQAngle.h">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\headers\SQAngle.h">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../headers/SQBoolean.h">
-			<Option virtualFolder="DataTypes/" />
+		<Unit filename="..\..\..\..\headers\SQBoolean.h">
+			<Option virtualFolder="DataTypes\" />
 		</Unit>
-		<Unit filename="../../../../headers/SQFloat.h">
-			<Option virtualFolder="DataTypes/" />
+		<Unit filename="..\..\..\..\headers\SQFloat.h">
+			<Option virtualFolder="DataTypes\" />
 		</Unit>
-		<Unit filename="../../../../headers/SQInteger.h">
-			<Option virtualFolder="DataTypes/" />
+		<Unit filename="..\..\..\..\headers\SQInteger.h">
+			<Option virtualFolder="DataTypes\" />
 		</Unit>
-		<Unit filename="../../../../headers/SQPoint.h">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\headers\SQPoint.h">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../headers/SQVF32.h">
-			<Option virtualFolder="DataTypes/" />
+		<Unit filename="..\..\..\..\headers\SQVF32.h">
+			<Option virtualFolder="DataTypes\" />
 		</Unit>
-		<Unit filename="../../../../source/EQIntersections.cpp">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\source\EQIntersections.cpp">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../source/EQSpaceRelation.cpp">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\source\EQSpaceRelation.cpp">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../source/QDualQuaternion.cpp">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\source\QDualQuaternion.cpp">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../source/QLineSegment2D.cpp">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\source\QLineSegment2D.cpp">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../source/QMatrix2x2.cpp">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\source\QMatrix2x2.cpp">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../source/QMatrix3x3.cpp">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\source\QMatrix3x3.cpp">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../source/QMatrix3x4.cpp">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\source\QMatrix3x4.cpp">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../source/QMatrix4x3.cpp">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\source\QMatrix4x3.cpp">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../source/QMatrix4x4.cpp">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\source\QMatrix4x4.cpp">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../source/QPlane.cpp">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\source\QPlane.cpp">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../source/QQuadrilateral.cpp">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\source\QQuadrilateral.cpp">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../source/QQuaternion.cpp">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\source\QQuaternion.cpp">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../source/QRay2D.cpp">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\source\QRay2D.cpp">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../source/QRotationMatrix3x3.cpp">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\source\QRotationMatrix3x3.cpp">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../source/QScalingMatrix3x3.cpp">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\source\QScalingMatrix3x3.cpp">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../source/QSpaceConversionMatrix.cpp">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\source\QSpaceConversionMatrix.cpp">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../source/QTransformationMatrix3x3.cpp">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\source\QTransformationMatrix3x3.cpp">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../source/QVector2.cpp">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\source\QVector2.cpp">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../source/QVector3.cpp">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\source\QVector3.cpp">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../source/QVector4.cpp">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\source\QVector4.cpp">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../source/SQAngle.cpp">
-			<Option virtualFolder="Math/" />
+		<Unit filename="..\..\..\..\source\SQAngle.cpp">
+			<Option virtualFolder="Math\" />
 		</Unit>
-		<Unit filename="../../../../source/SQBoolean.cpp">
-			<Option virtualFolder="DataTypes/" />
+		<Unit filename="..\..\..\..\source\SQBoolean.cpp">
+			<Option virtualFolder="DataTypes\" />
 		</Unit>
-		<Unit filename="../../../../source/SQFloat.cpp">
-			<Option virtualFolder="DataTypes/" />
+		<Unit filename="..\..\..\..\source\SQFloat.cpp">
+			<Option virtualFolder="DataTypes\" />
 		</Unit>
-		<Unit filename="../../../../source/SQVF32.cpp">
-			<Option virtualFolder="DataTypes/" />
+		<Unit filename="..\..\..\..\source\SQInteger.cpp">
+			<Option virtualFolder="DataTypes\" />
+		</Unit>
+		<Unit filename="..\..\..\..\source\SQVF32.cpp">
+			<Option virtualFolder="DataTypes\" />
 		</Unit>
 		<Extensions>
 			<code_completion />
