--- a/trunk/testing/projects/VS2010/QEUnitTests/Tools/Tools.vcxproj
+++ b/trunk/testing/projects/VS2010/QEUnitTests/Tools/Tools.vcxproj
@@ -84,16 +84,9 @@
     <ClInclude Include="..\..\..\..\testsystem\TestingExternalDefinitions.h" />
     <ClInclude Include="..\..\..\..\testsystem\TestingHelperDefinitions.h" />
     <ClInclude Include="..\..\..\..\tests\unit\testmodule_core\EQEnumerationMock.h" />
-    <ClInclude Include="..\..\..\..\tests\unit\testmodule_tools\QDualQuaternionWhiteBox.h" />
-    <ClInclude Include="..\..\..\..\tests\unit\testmodule_tools\QLineSegmentWhitebox.h" />
-    <ClInclude Include="..\..\..\..\tests\unit\testmodule_tools\QQuaternionWhitebox.h" />
-    <ClInclude Include="..\..\..\..\tests\unit\testmodule_tools\QRotationMatrix3x3WhiteBox.h" />
-    <ClInclude Include="..\..\..\..\tests\unit\testmodule_tools\QScalingMatrix3x3WhiteBox.h" />
-    <ClInclude Include="..\..\..\..\tests\unit\testmodule_tools\QSpaceConversionMatrixWhiteBox.h" />
+    <ClInclude Include="..\..\..\..\tests\unit\testmodule_tools\QLineSegmentWhiteBox.h" />
     <ClInclude Include="..\..\..\..\tests\unit\testmodule_tools\QTransformationMatrixWhiteBox.h" />
-    <ClInclude Include="..\..\..\..\tests\unit\testmodule_tools\QTranslationMatrixWhiteBox.h" />
     <ClInclude Include="..\..\..\..\tests\unit\testmodule_tools\QVector3Whitebox.h" />
-    <ClInclude Include="..\..\..\..\tests\unit\testmodule_tools\QVector4Whitebox.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\..\..\testsystem\UnitTestTemplate.txt" />
